initial commit for coordination ref data service. initial commit for alpha vantage api service.
various minor fixes and go.mod updates

--- a/finnhub-datagen/application-dev.yml
+++ b/finnhub-datagen/application-dev.yml
@@ -1,2 +1,12 @@
-pulsar-endpoint: pulsar://10.107.158.233:6650
+pulsar-endpoint: pulsar://192.168.39.38:32158
+
+pulsar-tenant: blumhuegel
+pulsar-namespace: finnhub-datagen
+
+topics:
+  candlesticks: candlesticks
+  market-news: market-news
+
+
+
 
