--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -12,9 +12,9 @@ jobs:
       - name: Setup go
         uses: actions/setup-go@v1
         with:
-          go-version: '1.14.10'
-        - run: go version
-        - run: ls
+          go-version: '^1.14.10'
+      - run: go version
+      - run: ls
 
 
 
