--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -13,8 +13,9 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: '1.14.10'
-        - run: go version
-        - run: ls
+      - run: go version
+      - run: ls
+      - run: external-sh-hello.sh
 
 
 
