--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -15,7 +15,7 @@ jobs:
           go-version: '^1.14.10'
       - run: go version
       - run: ls
-      - run: sh external-sh-hello.sh
+      - run: cd scripts && sh external-sh-hello.sh && cd ..
 
 
 
