--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -30,8 +30,9 @@ jobs:
       - uses: VaultVulp/gp-docker-action@1.1.7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          image-name: blum-cordsvc
-          dockerfile: datagen-cord/Dockerfile
+          image-name: datagen-cord
+          image-tag: canary
+          build-context: ./datagen-cord/Dockerfile
 
 
 
