--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -32,7 +32,7 @@ jobs:
       - uses: VaultVulp/gp-docker-action@1.1.7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          #image-name: datagen-cord
+          image-name: datagen-cord
           #image-tag: canary
           build-context: ./datagen-cord/
 
