--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -29,12 +29,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: ls
+      - run: cd datagen-cord
       - uses: VaultVulp/gp-docker-action@1.1.7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           image-name: datagen-cord
-          #image-tag: canary
-          build-context: ./datagen-cord/
+          image-tag: canary
+          #build-context: datagen-cord/
 
 
 
