--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -30,6 +30,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: ls
       - run: cd datagen-cord
+      - run: ls
       - uses: VaultVulp/gp-docker-action@1.1.7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
