--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -29,8 +29,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: ls
-      - run: cd datagen-cord
+      - run: cd ./datagen-cord
       - run: ls
+      - run: docker build -f ./datagen-cord/Dockerfile
       - uses: VaultVulp/gp-docker-action@1.1.7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
