--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -19,35 +19,28 @@ jobs:
       # run this external shell script to demonstrate the basic principle
       - run: sh scripts/external-sh-hello.sh
 
-      - run: cd datagen-cord
-      - run: ls
-      - run: cd ..
-      - run: ls
-
-
       - run: cd datagen-cord && ls
-
 
       - run: echo "now executing tests for submodules"
       - run: cd datagen-cord && sh ../scripts/test-go-module.sh
       - run: cd finnhub-datagen && sh ../scripts/test-go-module.sh
       - run: cd alphavantage-datagen && sh ../scripts/test-go-module.sh
       - run: cd quandl-datagen && sh ../scripts/test-go-module.sh
-
+      - run: cd datagen-cord
+            
+       
   publish-latest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: ls
       - run: cd datagen-cord && ls 
-      - run: ls
-      #- run: docker build -f ./datagen-cord/Dockerfile
       - uses: VaultVulp/gp-docker-action@1.1.7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           image-name: datagen-cord
           image-tag: canary
-          #build-context: datagen-cord/
+          build-context: datagen-cord
 
 
 
