--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -40,6 +40,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           image-name: datagen-cord
           image-tag: canary
+          dockerfile: ./datagen-cord/Dockerfile
           build-context: datagen-cord
 
 
