--- a/unifier-tf/src/main/docker/Dockerfile.native
+++ b/unifier-tf/src/main/docker/Dockerfile.native
@@ -7,11 +7,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native -t quarkus/qk-scraper .
+# docker build -f src/main/docker/Dockerfile.native -t quarkus/unifier-tf .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/qk-scraper
+# docker run -i --rm -p 8080:8080 quarkus/unifier-tf
 #
 ###
 FROM registry.access.redhat.com/ubi8/ubi-minimal:8.4
