--- a/unifier-tf/src/main/docker/Dockerfile.native-distroless
+++ b/unifier-tf/src/main/docker/Dockerfile.native-distroless
@@ -7,11 +7,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native-distroless -t quarkus/qk-scraper .
+# docker build -f src/main/docker/Dockerfile.native-distroless -t quarkus/unifier-tf .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/qk-scraper
+# docker run -i --rm -p 8080:8080 quarkus/unifier-tf
 #
 ###
 FROM quay.io/quarkus/quarkus-distroless-image:1.0
