--- a/unifier-tf/pom.xml
+++ b/unifier-tf/pom.xml
@@ -61,8 +61,12 @@
       <version>2.32.0</version>
       <scope>runtime</scope>
     </dependency>
-
-
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-csv</artifactId>
+      <version>1.9.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
